main/default/objects/Maintenance_Ticket_solution__c/Maintenance_Ticket_solution__c.object-meta.xml
<CustomObject>
    <label>Maintenance Ticket (solution)</label>
    <nameField>
        <displayFormat>TKT-{0000}</displayFormat>
        <label>Maintenance Ticket (solution) Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Maintenance Tickets (solution)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>