main/default/objects/Maintenance_Ticket_solution__c/fields/Maintenance_Worker__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Worker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The employee who tends to or fixes whatever the maintenance ticket is about.</description>
    <label>Maintenance Worker</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Maintenance Tickets (solution)</relationshipLabel>
    <relationshipName>Maintenance_Tickets_solution</relationshipName>
    <type>Lookup</type>
</CustomField>