main/default/objects/Maintenance_Ticket_solution__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <referenceTo>Stage_solution__c</referenceTo>
    <relationshipLabel>Maintenance Tickets (solution)</relationshipLabel>
    <relationshipName>Maintenance_Tickets_solution</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>